--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.7.0",
     "angular-ui-router": "~0.2.15",
-    "angular-validation-match": "~1.5.2"
+    "angular-validation-match": "~1.5.2",
+    "vue": "^1.0.16",
+    "marked": "^0.3.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
